manifests/client/busyboxCnp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: busybox-rule
  namespace: client
spec:
  description: "L4 policy to restrict all ingress trafiic to the busybox deployment and only allow egress traffic to http-echo, nginx, traefik. DNS also allowed"
  endpointSelector: 
    matchLabels: 
      app: busybox
  egress:
  - toEndpoints:
    - matchLabels:
        app: nginx
    - matchLabels:
        app: traefik
    - matchLabels:
        app: http-echo
    - matchLabels:
        k8s-app: kube-dns
    toPorts:
    - ports:  
      - port: "80"
        protocol: TCP
      - port: "8080"
        protocol: TCP
      - port: "5678"
        protocol: TCP
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
